# soroban-yield-vault

./: .gitignore  LICENSE  README.md  render.yaml
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs  test.rs  test_aqua_stack.rs  test_mocks.rs  test_props.rs  test_soroswap_stack.rs  test_stack_common.rs  venues.rs
contracts/router/src/venues/: aqua.rs  convert.rs  soroswap.rs
contracts/router/test_snapshots/test/: all_venues_failing_panics_and_reverts_funds.1.json  aqua_attempt_against_mock_moves_real_tokens.1.json  aqua_attempt_panicking_mock_returns_false.1.json  aqua_attempt_returns_false_on_negative_amounts_without_calling_venue.1.json  attempt_returns_false_when_venue_panics_and_rolls_back.1.json  both_venues_present_and_panicking_reverts_funds.1.json  fallback_preferred_serves_under_min_aqua_serves.1.json  fallback_preferred_soroswap_panics_aqua_serves.1.json  initialize_accepts_fee_bps_at_100_percent.1.json  initialize_stores_admin_venues_and_fees.1.json  lying_venue_serving_under_min_hits_slippage_exceeded.1.json  pair_stats_defaults_to_zeros.1.json  preferred_aqua_nominal_serves_with_registry.1.json  preferred_aqua_without_registry_falls_back_to_soroswap.1.json  set_aqua_pool_emits_event_with_sorted_pair.1.json  set_aqua_pool_rejects_non_admin.1.json  set_aqua_pool_rejects_same_token_without_event.1.json  (+10 more)
contracts/router/test_wasms/: README.md  SHA256SUMS  soroswap_aggregator.wasm
contracts/vault/: .gitignore  Cargo.toml
contracts/vault/src/: lib.rs  test.rs  test_blend.rs  test_matrix.rs  test_props.rs
docs/: the-arch.md
web/: README.md  (+5 more)
(+82 files in other folders)
