[package]
name = "yield-vault"
description = "ForYield Soroban YieldVault (MVP): USDC deposit/withdraw, 1:1 shares"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
blend-contract-sdk = "2.25.0"
soroban-sdk = "25"

[dev-dependencies]
blend-contract-sdk = { version = "2.25.0", features = ["testutils"] }
proptest = "1"
soroban-sdk = { version = "25", features = ["testutils"] }
